# pere-bot

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: spread_monitor_katana_lighter.yaml  spread_monitor_lighter_aster_wti.yaml  taker_taker_eth.yaml  taker_taker_wti.yaml
docs/: position_cache.md  wti_deployment.md
scripts/: _db.py  _smoke_utils.py  analyze_exec.py  aster_smoke.py  build_markout_table.py  katana_probe.py  lighter_sign_bench.py  lighter_smoke.py  lighter_ws_probe.py  live_latency.py  live_pnl.py  markout_analysis.py  plot_bias.py
src/perp_arb/: __init__.py  runbot.py
src/perp_arb/backtest/: __init__.py  base.py  cli.py  dataset.py  engine.py  fills.py  intents.py  latency.py  pnl.py  runner.py  snapshot.py  strategy.py
src/perp_arb/core/: capture.py  client_id.py  config.py  csv_recorder.py  decision.py  exchange.py  exec_record.py  executor.py  (+8 more)
tests/: test_aster_fills.py  test_aster_place_order_timeout_recovery.py  test_aster_signer.py  test_backtest_dataset.py  test_backtest_engine.py  test_backtest_fills.py  test_backtest_taker_taker.py  test_build_markout_table.py  test_config.py  test_csv_recorder.py  test_exec_record.py  test_executor.py  test_fill_enrichment.py  test_fill_tracker.py  test_lighter_fills.py  test_lighter_presign_pool.py  test_pair_pnl.py  test_persistence_gate.py  test_precision.py  test_record_sink.py  test_risk_manager.py  test_session.py  test_sqlite_recorder.py  test_taker_fill_model.py  test_taker_taker_logic.py  test_taker_taker_pending_overlay.py  test_taker_taker_reconcile.py  test_turso_integration.py
(+30 files in other folders)
